Added depends on logic in pods yaml

--- a/springdeploy.yml
+++ b/springdeploy.yml
@@ -4,6 +4,8 @@ kind: Deployment
 metadata:
   name: spring-deployment-service
 spec:
+  dependsOn:
+    - mysql-deployment
   replicas: 1
   selector:
     matchLabels:
