--- a/kubernetesdeploy/springdeploy.yml
+++ b/kubernetesdeploy/springdeploy.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: spring
-        image: iamantu93/project:latest
+        image: iamantu93/project:TAG
         ports:
         - containerPort: 8080
 
