--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ==============================================================
 # = Data Source
 # ==============================================================
-spring.datasource.url = jdbc:mysql://mysql-service:3306/sparklmsdb?useSSL=true
+spring.datasource.url = jdbc:mysql://bravo-rds.cjldgoxvvwoc.us-west-2.rds.amazonaws.com:3306/sparklmsdb?useSSL=true
 spring.datasource.username = antu
 spring.datasource.password = antu1234
 
